# documentation

./: .env.example  .gitattributes  .gitignore  .lighthouserc.js  .quartoignore  .vale.ini  AGENTS.md  CLA.txt  Dockerfile  README.md  _quarto.yml  documentation.qmd  kind-config.yaml  metadata.json  pyproject.toml  requirements.txt  test_results.md  validmind-docs-deployment.yaml  validmind-docs.yaml  validmind-requirements.txt
.cursor/: mcp.json
.github/: pull_request_template.md
anima/: globals.css  index.html  style.css  styleguide.css
internal/: fundamentals.qmd
jn-toc/: README.md  package-lock.json  package.json
playwright-report/: index.html
release-scripts/: generate-release-notes.ipynb  generate-release-notes1.ipynb  generate_release_objects.py  year-end-cleanup.ipynb  yearly_cleanup.py
scripts/: generate_permissions_docs.py  generate_template_schema_docs.py
site-unused/: architecture.qmd  assign-model-validators.qmd  before-you-begin.qmd  cloud-platforms.qmd  configure-sso.qmd  configure-test-plans.qmd  configure-workflows.qmd  create-documentation.qmd  create-project-findings.qmd  dataset-object.qmd  dataset-object.qmdods  edit-templates.qmd  editions-and-features.qmd  explore-validmind.qmd  faq-data-handling.qmd  get-started-closed-beta.qmd  glossary.qmd  index-old.qmd  login.qmd  manage-project-findings.qmd  manage-roles-and-permissions.qmd  manage-users-and-roles.qmd  mermaid-diagrams-dev-framework.qmd  model-evaluation-tests.qmd  model-object.qmd  mrm-lifecyle.qmd  mrm-three-lines-of-defense.qmd  mrm.qmd  onboard-initial-users.qmd  (+9 more)
(+4660 files in other folders)
