[tool.poetry]
authors = ["Nikolaj Richers <nik@validmind.ai>", "Andres Rodriguez <andres@validmind.ai>"]
description = ""
name = "documentation"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
dython = "^0.7.3"
myst-parser = "^1.0.0"
python = ">=3.8, <3.11"
sphinx = "^6.1.3"
sphinx-markdown-builder = "^0.5.5"
tabulate = "^0.9.0"
pandas-profiling = "^3.6.6"
ipython = "^8.11.0"
shap = "^0.41.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
