[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = ["Beck <164545837+validbeck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# Core ValidMind + LLM support (merged into one line in Poetry)
validmind = { version = "*", extras = ["llm"] }

# Additional dependencies
fairlearn = "*"
shap = "0.44.1"
anywidget = "*"
kaleido = "*"
scipy = "1.10.1"
pandas = "*"
scikit-learn = "*"
matplotlib = "*"
plotly = "*"
ipykernel = "*"
traitlets = "*"
tornado = "*"
pyzmq = "*"
debugpy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
